MainWindow code renovation
language level and IDE warning fixes